# alg-group

./: .gitignore  CMakeLists.txt  ClassDiagram.docx  README.md  main.cpp
factory_header/: abstract_op_factory.hpp  op_factory.hpp
factory_src/: op_factory.cpp
group_header/: group.hpp
group_src/: group.cpp
memento_header/: memento.hpp
memento_src/: memento.cpp
op_header/: base.hpp  custom.hpp  op.hpp  operations.hpp
op_src/: custom.cpp  op.cpp
strategy_header/: associative.hpp  closure.hpp  commutative.hpp  identity.hpp  inverse.hpp  verification.hpp  verifier.hpp
strategy_src/: associative.cpp  closure.cpp  commutative.cpp  identity.cpp  inverse.cpp  verification.cpp
tests/: factory_tests.cpp  memento_tests.cpp  op_tests.cpp  strategy_tests.cpp  tests.cpp  verif_tests.cpp
